update index.html header tags

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import "tailwindcss";
 
 
-/* If using Tailwind classes */
+/*using Tailwind classes */
   .klee-one-regular {
     font-family: "Klee One", cursive;
   }
